# sfvArchiving

./: CMakeLists.txt  readme.md
include/sfv/: SFVCommon.h  SFVReader.h  SFVWriter.h
include/utils/: SimpleArguments.h  Timer.h
src/: main.cpp
src/sfv/: sfv_common.cpp  sfv_common_crc.cpp
